--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dev_dependencies:
   geocoding: ^2.0.0
   animated_text_kit:
   connectivity:
+  sqflite:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
